...
    final db = Provider.of<NoteDatabase>(context);
    final snapshot = useStream(db.watchAllActivated());
    final notes = snapshot.data ?? [];

    return Scaffold(
      appBar: AppBar(
        title: const Text('笔记'),
        actions: <Widget>[
          IconButton(
            icon: const Icon(Icons.archive),
            onPressed: () {
              Navigator.of(context).push(MaterialPageRoute(
                builder: (context) => const NoteListArchivedList(),
...
