...
              SimpleDialogOption(
                child: const Text('编辑'),
                padding: const EdgeInsets.symmetric(vertical: 16, horizontal: 24),
                onPressed: () => _editBook(context, ref),
              ),
              SimpleDialogOption(
                child: const Text('删除'),
                padding: const EdgeInsets.symmetric(vertical: 16, horizontal: 24),
                onPressed: () => _deleteBook(context, ref),
              ),
            ],
          ),
        );
...
            autofocus: true,
            child: const Text('取消'),
            onPressed: () => Navigator.of(context).pop(),
          ),
          TextButton(
            style: TextButton.styleFrom(primary: Theme.of(context).errorColor),
            child: const Text('确认'),
            onPressed: () async {
              await ref.read(walletBookProvider.notifier).delete(book!);
              Navigator.of(context)
                ..pop()
                ..pop();
            },
...
