...
    final category = useState(0);
    final pageController = usePageController();

    return PageContainer(
      child: Scaffold(
        appBar: AppBar(
          title: const Text('添加资产'),
        ),
        body: Column(
          children: [
            RadioButtons(
              textList: walletAssetCategory,
              selected: category.value,
...
